test authentication login and get the token

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  dio: ^5.2.1+1
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
