--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.6
+  get_it: ^7.6.0
   shared_preferences: ^2.2.0
 
 dev_dependencies:
